tests/chainsaw-multi-ns/gateway-multi-operator/namespace-b/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-b
  namespace: namespace-b
spec:
  parentRefs:
    - name: gateway-b
      namespace: namespace-b
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gateway-service-b
          port: 80
